--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
           <div>
             
           </div>
+           <footer>
+            <button id="reset" onclick="resetBtn()">RESET</button>
+          </footer>
         </div>
+     
         <script src="index.js"></script>
     </body>
 </html>
